@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9999999917';
+our $VERSION='0.9999999918';
 
 
 use 5.005;
